--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ python = "^3.7.3"
 httpx = "^0.20.0"
 nonebot2 = "^2.0.0.beta.1"
 nonebot-adapter-onebot = "^2.0.0-beta.1"
-# nonebot-plugin-htmlrender = "^0.0.4"
+nonebot-plugin-htmlrender = "^0.0.4"
+Jinja2 = "^3.1.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.1.0", allow-prereleases = true}
