--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,29 @@
-[tool.poetry]
+[project]
 name = "nonebot-plugin-mcsmanager"
-version = "0.0.1"
-description = "MCSManager plugin for nonebot"
-authors = ["kexue <x@kexue.io>"]
+version = "0.1.0"
+description = "mcsm for nonebot2"
+authors = [
+    {name = "kexue", email = "x@kexue-cloud.cn"},
+]
+dependencies = [
+    "pydantic>=2.7.4",
+    "httpx>=0.27.0",
+    "nonebot-plugin-send-anything-anywhere>=0.6.1",
+    "nonebot-plugin-alconna>=0.47.0",
+]
+requires-python = ">=3.9"
 readme = "README.md"
-license = "MIT"
-
-[tool.poetry.dependencies]
-python = "^3.7.3"
-httpx = "^0.20.0"
-nonebot2 = "^2.0.0.beta.1"
-nonebot-adapter-onebot = "^2.0.0-beta.1"
-nonebot-plugin-htmlrender = "^0.0.4"
-Jinja2 = "^3.1.1"
-
-[tool.poetry.dev-dependencies]
-black = {version = "^22.1.0", allow-prereleases = true}
-isort = "^5.10.1"
-mypy = "^0.931"
-flake8 = "^3"
+license = {text = "MIT"}
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
+
+[tool.pdm]
+distribution = true
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "datamodel-code-generator>=0.25.7",
+]
