--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,11 +15,21 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: build release distributions
-        run: |
-          # NOTE: put your own distribution build steps here.
-          python -m build
+      - name: Install pypa/build
+        run: >-
+          python -m
+          pip install
+          build
+          --user
 
+      - name: Build a binary wheel and a source tarball
+        run: >-
+          python -m
+          build
+          --sdist
+          --wheel
+          --outdir dist/
+          .
       - name: upload windows dists
         uses: actions/upload-artifact@v4
         with:
